--- a/static/css/main.css
+++ b/static/css/main.css
@@ -180,17 +180,217 @@ blockquote {
   	filter: initial;
 }
 
+/*
+    fullwindow
+*/
+#fullwindow img {
+    padding: 0;
+    filter: none;
+}
+.fullwindow-trigger {
+    cursor: pointer;
+}
+.fullwindow-control-btn {
+    width: 80px;
+    position: absolute;
+    cursor: pointer;
+    -webkit-user-select: none; /* Safari */
+    user-select: none; /* Standard syntax */
+    mix-blend-mode: difference;
+}
+.fullwindow-control-btn:hover {
+    opacity: 0.5;
+}
 #fullwindow {
     display: none;
     position: fixed;
     top: 0px;
     left: 0px;
     margin: 0px;
-    width: 100%;
-    height: 100%;
+    width: 100vw;
+    max-width: 100%;
+    height: 100vh;
     box-sizing: border-box;
     background-color: #000;
-    z-index: +1;
+    z-index: +3;
+}
+.viewing-fullwindow #fullwindow {
+    display: block;
+}
+#fullwindow-image
+{
+    position: absolute;
+    top: 0px;
+    left: 0px;
+    width: 100%;
+    height: 100%;
+    padding: 0;
+    margin: 0;
+    object-fit: contain;
+}
+#fullwindow-caption
+{
+    color: #fff;
+}
+#fullwindow-caption.empty {
+    padding-top: 0;
+}
+.fullwindow-control-btn > img {
+    display: block;
+    padding: 0;
+    filter: none;
+}
+#close-fullwindow-btn {
+    top: 10px;
+    left: 10px;
+}
+#fullwindow-next-btn,
+#fullwindow-prev-btn {
+    position: absolute;
+    top: 0;
+    height: 100vh;
+    width: 50%;
+}
+#fullwindow-next-btn {
+   right: 0;
+   cursor: url(../../media/png/arrow-forward-6-w.png), pointer;
+}
+#fullwindow-prev-btn {
+    left: 0;
+    cursor: url(../../media/png/arrow-back-6-w.png), pointer;
+}
+#fullwindow-next-btn.disabled,
+#fullwindow-prev-btn.disabled{
+    cursor: auto;
+}
+#fullwindow-caption-btn {
+    width: 36px;
+    bottom: 10px;
+    left: 10px;
+}
+.viewing-fullwindow #badge-container {
+    display: none;
+}
+#fullwindow-caption.empty ~ #fullwindow-caption-btn {
+    display: none;;
+}
+
+
+#screenfull-container {
+    display: none;
+    position: fixed;
+    top: 0px;
+    left: 0px;
+    margin: 0px;
+    width: 100vw;
+    max-width: 100%;
+    height: 100vh;
+    box-sizing: border-box;
+    background-color: #000;
+    z-index: 2000;
+}
+
+#screenfull-image-wrapper {
+    width: 100%;
+    height: 100%;
+}
+.viewing-screenfull #screenfull-container {
+    display: block;
+}
+#screenfull-image-wrapper img {
+    display: block;
+    width: 100%;
+    height: 100%;
+    object-fit: contain;
+}
+#screenfull-caption {
+    display: none;
+    text-align: center;
+    position: absolute;
+    width: 100%;
+    padding: 10px 100px; 
+    bottom: 0px;
+    color: #FFF;
+    margin: 0;
+    background-color: #000;
+}
+.viewing-screenfull-caption #screenfull-caption{
+    display: block;
+}
+#screenfull-caption.empty {
+    padding-top: 0;
+}
+*[screenfull-index]
+{
+    cursor: pointer;
+}
+
+.screenfull-control-btn {
+    width: 36px;
+    position: absolute;
+    cursor: pointer;
+    -webkit-user-select: none; /* Safari */
+    user-select: none; /* Standard syntax */
+    mix-blend-mode: difference;
+}
+.screenfull-control-btn:hover {
+    opacity: 0.5;
+}
+
+.screenfull-control-btn > img {
+    display: block;
+}
+.hiding-controls .screenfull-control-btn{
+    transition: opacity .5s;
+    opacity: 0;
+}
+#close-screenfull-btn {
+    top: 10px;
+    right: 10px;
+}
+#enter-screenfull-btn {
+    top: 10px;
+    right: 50px;
+    display: none;
+}
+.viewing-screenfull #logo-container,
+.viewing-screenfull #badge-container{
+    display: none;
+}
+#screenfull-next-btn,
+#screenfull-prev-btn
+{
+    position: absolute;
+    top: 0;
+    height: 100vh;
+    width: 50%;
+}
+#screenfull-next-btn {
+   right: 0;
+   /* cursor: url(../../media/png/arrow-forward-6-w.png) 20 20, pointer; */
+   cursor: pointer;
+   width: 100%;
+}
+#screenfull-prev-btn {
+    left: 0;
+    cursor: url(../../media/png/arrow-back-6-w.png) 0 20, pointer;
+    display: none;
+}
+#screenfull-caption-btn {
+    width: auto;
+    padding: 2px 5px;
+    bottom: 10px;
+    left: 10px;
+    font-family: Helvetica, sans-serif;
+    color: #fff;
+}
+
+.viewing-screenfull-caption #screenfull-caption-btn {
+    opacity: 0.5;
+}
+
+#screenfull-caption.empty ~ #screenfull-caption-btn {
+    display: none;
 }
 
 /* classes */
@@ -251,18 +451,6 @@ blockquote {
     display: block;
 }
 
-.fullwindow {
-    position: fixed;
-    top: 0px;
-    left: 0px;
-    width: 100%;
-    height: 100%;
-	padding: initial;
-    object-fit: contain;
-    filter: initial;
-    z-index: +1;
-}
-
 .make blockquote {
     margin-block-start: 15px;
     margin-block-end: 15px;
@@ -305,6 +493,7 @@ blockquote {
     font-size: 10px;
     line-height: 15px;
     break-inside: avoid;
+    word-wrap: break-word;
 }
 
 .make #notes a::before {
@@ -324,7 +513,7 @@ blockquote {
 
 .make #body img {
     display: inline-block;
-    margin-left: -24px;
+    /* margin-left: -24px; */
 }
 
 .make #body div:first-of-type {
@@ -368,4 +557,9 @@ blockquote {
     .make #columns {
         padding: 0px;
     }
+    /* firefox fix
+    img, video {
+        filter: none;
+    }
+    */
 }
